wtx-macros-tests/tests/fail/bad_req.stderr
error: Request data must end with the `Req` suffix.
 --> tests/fail/bad_req.rs:5:14
  |
5 |   pub struct Rfdsqw;
  |              ^^^^^^

error: aborting due to 1 previous error

